[releases/6.1.z]  EAP 7.4.10 compatibility (#102)
* WINDUP-3671 Replace security-realm by Elytron (#100)

* Support JDK17

* Add script to remove deprecated config and use elytron instead

* Remove JDK17 validation

* Support JDK17 (#99)

* Support JDK17

* Add script to remove deprecated config and use elytron instead

* Reduced the 'add-opens' options

* JDK 17 compatibility changes (#101)

---------

Co-authored-by: Carlos E. Feria Vila <carlosthe19916@gmail.com>